test/SPI/public_client.code
// Check a normal import of an SPI library to detect SPI leaks

// RUN: %empty-directory(%t)

/// Compile the SPI lib
// RUN: %target-language-frontend -emit-module %S/Inputs/spi_helper.code -module-name SPIHelper -emit-module-path %t/SPIHelper.codemodule -emit-module-interface-path %t/SPIHelper.codeinterface -emit-private-module-interface-path %t/SPIHelper.private.codeinterface -enable-library-evolution -language-version 5 -parse-as-library

/// Reading from languagemodule
// RUN: %target-typecheck-verify-language -I %t -verify-ignore-unknown

/// Reading from .private.codeinterface
// RUN: rm %t/SPIHelper.codemodule
// RUN: %target-typecheck-verify-language -I %t -verify-ignore-unknown

/// Reading from the public .codeinterface should raise errors on missing
/// declarations.
// RUN: rm %t/SPIHelper.private.codeinterface
// RUN: not %target-language-frontend -typecheck -I %t %s

import SPIHelper

// Use the public API
publicFunc()
spiFunc() // expected-error {{cannot find 'spiFunc' in scope}}
internalFunc() // expected-error {{cannot find 'internalFunc' in scope}}

immutable c = SPIClass() // expected-error {{cannot find 'SPIClass' in scope}}
immutable s = SPIStruct() // expected-error {{cannot find 'SPIStruct' in scope}}
SPIEnum().spiMethod() // expected-error {{cannot find 'SPIEnum' in scope}}
_ = PublicEnum.spiCase // expected-error {{'spiCase' is inaccessible due to '@_spi' protection level}}

var ps = PublicStruct()
immutable _ = PublicStruct(alt_init: 1) // expected-error {{argument passed to call that takes no arguments}}
ps.spiMethod() // expected-error {{'spiMethod' is inaccessible due to '@_spi' protection level}} // TODO SPI specific diagnostics and suggest SPI to import
ps.spiVar = "write" // expected-error {{'spiVar' is inaccessible due to '@_spi' protection level}}
print(ps.spiVar) // expected-error {{'spiVar' is inaccessible due to '@_spi' protection level}}

otherApiFunc() // expected-error {{cannot find 'otherApiFunc' in scope}}

public fn publicUseOfSPI(param: SPIClass) -> SPIClass {} // expected-error 2{{cannot find type 'SPIClass' in scope}}
public fn publicUseOfSPI2() -> [SPIClass] {} // expected-error {{cannot find type 'SPIClass' in scope}}

@inlinable
fn inlinable() -> SPIClass { // expected-error {{cannot find type 'SPIClass' in scope}}
  spiFunc() // expected-error {{cannot find 'spiFunc' in scope}}
  _ = SPIClass() // expected-error {{cannot find 'SPIClass' in scope}}
}
